; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_deprecated.c_conflict_func_1to2_wrapper.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_wc/extr_deprecated.c_conflict_func_1to2_wrapper.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.conflict_func_1to2_baton = type { i32, i32 (i32**, i32*, i32, i32*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i32**, i32*, i8*, i32*, i32*)* @conflict_func_1to2_wrapper to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @conflict_func_1to2_wrapper(i32** %0, i32* %1, i8* %2, i32* %3, i32* %4) #0 {
  %6 = alloca i32**, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca %struct.conflict_func_1to2_baton*, align 8
  %12 = alloca i32*, align 8
  store i32** %0, i32*** %6, align 8
  store i32* %1, i32** %7, align 8
  store i8* %2, i8** %8, align 8
  store i32* %3, i32** %9, align 8
  store i32* %4, i32** %10, align 8
  %13 = load i8*, i8** %8, align 8
  %14 = bitcast i8* %13 to %struct.conflict_func_1to2_baton*
  store %struct.conflict_func_1to2_baton* %14, %struct.conflict_func_1to2_baton** %11, align 8
  %15 = load i32*, i32** %7, align 8
  %16 = load i32*, i32** %10, align 8
  %17 = call i32* @svn_wc__cd2_to_cd(i32* %15, i32* %16)
  store i32* %17, i32** %12, align 8
  %18 = load %struct.conflict_func_1to2_baton*, %struct.conflict_func_1to2_baton** %11, align 8
  %19 = getelementptr inbounds %struct.conflict_func_1to2_baton, %struct.conflict_func_1to2_baton* %18, i32 0, i32 1
  %20 = load i32 (i32**, i32*, i32, i32*)*, i32 (i32**, i32*, i32, i32*)** %19, align 8
  %21 = load i32**, i32*** %6, align 8
  %22 = load i32*, i32** %12, align 8
  %23 = load %struct.conflict_func_1to2_baton*, %struct.conflict_func_1to2_baton** %11, align 8
  %24 = getelementptr inbounds %struct.conflict_func_1to2_baton, %struct.conflict_func_1to2_baton* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = load i32*, i32** %9, align 8
  %27 = call i32 %20(i32** %21, i32* %22, i32 %25, i32* %26)
  %28 = call i32* @svn_error_trace(i32 %27)
  ret i32* %28
}

declare dso_local i32* @svn_wc__cd2_to_cd(i32*, i32*) #1

declare dso_local i32* @svn_error_trace(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
